# forge

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.release  Dockerfile.sandbox  README.md  TESTSPRITE_PRD.md  docker-compose.yml  example.yaml  issue25.yaml
.github/workflows/: forge-docker.yml
crates/forge/: Cargo.toml
crates/forge-agent/: Cargo.toml
crates/forge-agent/src/: agent.rs  history_processors.rs  lib.rs  problem_statement.rs
crates/forge-api/: Cargo.toml
crates/forge-env/: Cargo.toml
crates/forge-env/src/: bash_session.rs  docker.rs  environment.rs  lib.rs  repo.rs  utils.rs
crates/forge-model/: Cargo.toml
crates/forge-plugin/: Cargo.toml
crates/forge-run/: Cargo.toml
crates/forge-run/src/: config.rs  lib.rs  run_batch.rs  run_single.rs
crates/forge-tools/: Cargo.toml
crates/forge-types/: Cargo.toml
crates/forge/src/: main.rs
examples/: .env.example  README.md
examples/method-1-oneshot/: README.md  docker-compose.yml  forge.yaml
examples/method-2-config-file/: README.md  docker-compose.yml  forge-issue28.yaml
examples/method-3-watch/: README.md  docker-compose.yml
examples/trajectories/: OkeyAmy__Axioschat-Onboard-i27.traj
landing/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
landing/app/: globals.css  layout.tsx  page.tsx
landing/components/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  ModelConfig.tsx  Navbar.tsx  Setup.tsx
landing/hooks/: useInView.ts
landing/lib/: terminal-lines.ts
landing/testsprite_tests/: TC002_Primary_CTA_scrolls_to_Setup_section.py  TC002_Setup_section_reachable_by_in_page_navigation_or_scroll.py  TC003_Model_configuration_section_is_visible_with_example_snippet.py  TC003_Model_provider_examples_switch_across_three_providers.py  TC004_Docker_setup_mode_shows_Docker_specific_instructions.py  TC005_GitHub_link_opens_in_a_new_tab_with_safe_rel_attributes.py  TC005_GitHub_repository_links_use_new_tab_and_safe_rel_DOM_or_single_click.py  TC007_Build_from_source_setup_mode_shows_developer_instructions.py  TC007_Linear_journey_features_through_footer_without_interactive_toggles.py  TC008_Footer_provides_an_external_GitHub_destination.py  TC009_Switching_setup_modes_updates_the_visible_codeinstructions.py  TC010_Model_provider_example_includes_env_var_or_config_snippet_content.py  (+7 more)
nos_job_def/: forge_job_definition.json
testsprite_tests/: TC001_post_api_run_single_forge_agent_run.py  TC002_post_api_run_batch_parallel_agent_runs.py  TC003_post_get_delete_api_watch_background_github_label_watcher.py  TC004_get_api_trajectories_list_trajectory_files_with_metadata.py  TC005_get_api_trajectories_name_full_trajectory_file_content.py  TC006_get_api_stats_aggregate_exit_status_counts.py  TC007_get_api_issues_list_open_github_issues.py  TC008_get_health_liveness_readiness_probe.py  standard_prd.json  testsprite-mcp-test-report.html  testsprite-mcp-test-report.md  testsprite_backend_test_plan.json
trajectories/: OkeyAmy__Axioschat-Onboard-i25.traj
(+48 files in other folders)
