[workspace]
members = [
    "crates/forge-types",
    "crates/forge-tools",
    "crates/forge-model",
    "crates/forge-env",
    "crates/forge-agent",
    "crates/forge-run",
    "crates/forge-plugin",
    "crates/forge",
    "crates/forge-api",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
indexmap = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bollard = "0.18"
futures-util = "0.3"
tar = "0.4"
flate2 = "1"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive", "env"] }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
